add example model and additional documentation

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
-TYPEORM_CONNECTION="postgres"
-TYPEORM_HOST="localhost"
-TYPEORM_PORT="5432"
-TYPEORM_USERNAME="titl"
-TYPEORM_PASSWORD="super-secure"
-TYPEORM_DATABASE="titldb"
+DB_CONNECTION="postgres"
+DB_HOST="localhost"
+DB_PORT="5432"
+DB_USERNAME="titl"
+DB_PASSWORD="super-secure"
+DB_DATABASE="titldb"
