--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "main": "index.js",
   "scripts": {
     "start": "ts-node-dev -r tsconfig-paths/register src/index.ts",
+    "tsc:watch": "tsc-watch --onSuccess 'node ./dist/index.js'",
+    "db:migration:create": "ts-node --transpile-only ./node_modules/typeorm/cli.js migration:generate -n $1",
     "build": "tsc"
   },
   "dependencies": {
@@ -18,7 +20,9 @@
   "devDependencies": {
     "@types/express": "^4.17.7",
     "@types/node": "^16.7.1",
+    "ts-node": "^10.2.1",
     "ts-node-dev": "^1.1.8",
+    "tsc-watch": "^4.5.0",
     "tsconfig-paths": "^3.11.0"
   }
 }
