--- a/package.json
+++ b/package.json
@@ -1,17 +1,18 @@
 {
   "name": "web",
   "version": "1.0.0",
-  "_moduleDirectories": ["./dist"],
+  "_moduleDirectories": [
+    "./dist"
+  ],
   "scripts": {
-    "start": "ts-node-dev -r tsconfig-paths/register src/index.ts",
-    "tsc:watch": "tsc-watch -p ./tsconfig.app.json --onSuccess 'node ./dist/index.js'",
-    "build": "tsc -p tsconfig.app.json",
-    "build:test": "foal rmdir build && tsc -p tsconfig.test.json",
-    "start:test": "mocha --file ./dist/test.js \"./build/**/*.spec.js\"",
-    "test": "npm run dist:test && concurrently \"tsc -p tsconfig.test.json -w\" \"mocha --file ./build/test.js -w \\\"./build/**/*.spec.js\\\"\"",
-    "build:e2e": "foal rmdir build && tsc -p tsconfig.e2e.json",
-    "start:e2e": "mocha --timeout 4000 --file ./dist/e2e.js \"./build/e2e/**/*.js\"",
-    "e2e": "npm run dist:e2e && concurrently \"tsc -p tsconfig.e2e.json -w\" \"mocha --file ./build/e2e.js -w \\\"./build/e2e/**/*.js\\\"\"",
+    "start": "npm run build && concurrently \"tsc -p tsconfig.app.json -w\" \"supervisor -w ./dist,./config -e js,json,yml --no-restart-on error ./dist/index.js\"",
+    "build": "foal rmdir dist && tsc -p tsconfig.app.json",
+    "build:test": "foal rmdir dist && tsc -p tsconfig.test.json",
+    "start:test": "mocha --file ./dist/test.js \"./dist/**/*.spec.js\"",
+    "test": "npm run build:test && concurrently \"tsc -p tsconfig.test.json -w\" \"mocha --file ./dist/test.js -w \\\"./dist/**/*.spec.js\\\"\"",
+    "build:e2e": "foal rmdir dist && tsc -p tsconfig.e2e.json",
+    "start:e2e": "mocha --timeout 4000 --file ./dist/e2e.js \"./dist/e2e/**/*.js\"",
+    "e2e": "npm run build:e2e && concurrently \"tsc -p tsconfig.e2e.json -w\" \"mocha --file ./dist/e2e.js -w \\\"./dist/e2e/**/*.js\\\"\"",
     "migrate": "npx typeorm migration:run",
     "db:migration:create": "ts-node --transpile-only ./node_modules/typeorm/cli.js migration:generate -n $1",
     "migrate:undo": "npx typeorm migration:revert",
@@ -23,8 +24,10 @@
   },
   "dependencies": {
     "@foal/core": "^2.0.0",
+    "@foal/jwt": "^2.5.0",
     "@foal/typeorm": "^2.0.0",
     "express": "4.17.1",
+    "jsonwebtoken": "^8.5.1",
     "module-alias": "^2.2.2",
     "pg": "^8.7.1",
     "reflect-metadata": "^0.1.13",
@@ -36,6 +39,7 @@
   "devDependencies": {
     "@foal/cli": "^2.5.0",
     "@types/express": "^4.17.7",
+    "@types/jsonwebtoken": "^8.5.5",
     "@types/mocha": "7.0.2",
     "@types/node": "^16.7.1",
     "@typescript-eslint/eslint-plugin": "~2.7.0",
