[documentation] update readme and add test to github check

--- a/.env.example
+++ b/.env.example
@@ -4,3 +4,6 @@ DB_PORT="5432"
 DB_USERNAME="titl"
 DB_PASSWORD="super-secure"
 DB_DATABASE="titldb"
+
+JWT_SECRET="some-secure-string"
+SETTINGS_LOGGER_FORMAT="tiny"
