--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "build": "foal rmdir dist && tsc -p tsconfig.app.json",
     "build:test": "foal rmdir dist && tsc -p tsconfig.test.json",
     "start:test": "mocha --file ./dist/test.js \"./dist/**/*.spec.js\"",
-    "test": "npm run build:test && concurrently \"tsc -p tsconfig.test.json -w\" \"mocha --file ./dist/test.js -w \\\"./dist/**/*.spec.js\\\"\"",
+    "test": "npm run build:test && npm run start:test",
+    "test:watch": "npm run build:test && concurrently \"tsc -p tsconfig.test.json -w\" \"mocha --file ./dist/test.js -w \\\"./dist/**/*.spec.js\\\"\"",
     "build:e2e": "foal rmdir dist && tsc -p tsconfig.e2e.json",
     "start:e2e": "mocha --timeout 4000 --file ./dist/e2e.js \"./dist/e2e/**/*.js\"",
     "e2e": "npm run build:e2e && concurrently \"tsc -p tsconfig.e2e.json -w\" \"mocha --file ./dist/e2e.js -w \\\"./dist/e2e/**/*.js\\\"\"",
