--- a/.github/workflows/passing-tests.yml
+++ b/.github/workflows/passing-tests.yml
@@ -1,7 +1,7 @@
 name: Passing Tests
 on: [push]
 jobs:
-  app-build:
+  passing-tests:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
