--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "db:migration:create": "ts-node --transpile-only ./node_modules/typeorm/cli.js migration:generate -n $1",
     "migrate:undo": "npx typeorm migration:revert",
     "lint": "eslint --ext ts src",
-    "lint:fix": "eslint --ext ts --fix src"
+    "lint:fix": "eslint --ext ts --fix src",
+    "generate:uml": "typeorm-uml ormconfig.js --download docs/database-uml.png"
   },
   "engines": {
     "node": ">=14"
@@ -52,6 +53,7 @@
     "ts-node": "^10.2.1",
     "ts-node-dev": "^1.1.8",
     "tsc-watch": "^4.5.0",
-    "tsconfig-paths": "^3.11.0"
+    "tsconfig-paths": "^3.11.0",
+    "typeorm-uml": "^1.6.4"
   }
 }
