[titl-24] update migration create and generate commands

--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "start:e2e": "mocha --timeout 4000 --file ./dist/e2e.js \"./dist/e2e/**/*.js\"",
     "e2e": "npm run build:e2e && concurrently \"tsc -p tsconfig.e2e.json -w\" \"mocha --file ./dist/e2e.js -w \\\"./dist/e2e/**/*.js\\\"\"",
     "migrate": "npx typeorm migration:run",
-    "db:migration:create": "ts-node --transpile-only ./node_modules/typeorm/cli.js migration:generate -n $1",
+    "db:migration:create": "ts-node --transpile-only ./node_modules/typeorm/cli.js migration:create -n $1",
+    "db:migration:generate": "ts-node --transpile-only ./node_modules/typeorm/cli.js migration:generate -n $1",
     "migrate:undo": "npx typeorm migration:revert",
     "lint": "eslint --ext ts src",
     "lint:fix": "eslint --ext ts --fix src",
