--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
   },
   "devDependencies": {
     "@foal/cli": "^2.5.0",
+    "@foal/swagger": "^2.5.0",
     "@types/express": "^4.17.7",
     "@types/jsonwebtoken": "^8.5.5",
     "@types/mocha": "7.0.2",
