--- a/.github/workflows/successful-client-build.yml
+++ b/.github/workflows/successful-client-build.yml
@@ -7,13 +7,13 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2
       - name: Yarn install
-        working-directory: './client'
+        working-directory: ./client
         uses: actions/setup-node@v2
         with:
           node-version: '14.x'
       - name: Install Dependencies
-        working-directory: './client'
+        working-directory: ./client
         run: yarn install
       - name: Build The Application
-        working-directory: './client'
+        working-directory: ./client
         run: yarn build
