--- a/client/package.json
+++ b/client/package.json
@@ -54,6 +54,7 @@
     "concurrently": "^6.2.1",
     "postcss": "^8.3.6",
     "postcss-cli": "^8.3.1",
+    "style-dictionary": "^3.0.2",
     "tailwindcss": "^2.2.15"
   }
 }
