--- a/client/package.json
+++ b/client/package.json
@@ -47,8 +47,10 @@
     "@testing-library/user-event": "^12.1.10",
     "@types/jest": "^26.0.15",
     "@types/node": "^12.0.0",
-    "@types/react": "^17.0.0",
-    "@types/react-dom": "^17.0.0",
+    "@types/react": "^17.0.20",
+    "@types/react-dom": "^17.0.9",
+    "@types/react-router-dom": "^5.1.9",
+    "@types/redux-logger": "^3.0.9",
     "autoprefixer": "^10.3.4",
     "chokidar-cli": "^3.0.0",
     "concurrently": "^6.2.1",
