--- a/client/package.json
+++ b/client/package.json
@@ -32,6 +32,7 @@
   },
   "dependencies": {
     "@material-tailwind/react": "0.3.4",
+    "axios": "^0.21.4",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.5",
@@ -60,5 +61,6 @@
     "style-dictionary": "^3.0.2",
     "tablemark": "^2.0.0",
     "tailwindcss": "^2.2.15"
-  }
+  },
+  "proxy": "http://localhost:8000"
 }
