[titl-35] allow a cookie to be stored in the browser so requests will go through to the API

--- a/.env.example
+++ b/.env.example
@@ -6,4 +6,7 @@ DB_PASSWORD="super-secure"
 DB_DATABASE="titldb"
 
 JWT_SECRET="some-secure-string"
+JWT_COOKIE_DOMAIN="localhost"
+JWT_COOKIE_HTTP_ONLY="true"
+
 SETTINGS_LOGGER_FORMAT="tiny"
