--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "express": "4.17.1",
     "jsonwebtoken": "^8.5.1",
     "module-alias": "^2.2.2",
+    "nodemailer": "^6.6.3",
     "pg": "^8.7.1",
     "reflect-metadata": "^0.1.13",
     "remove": "^0.1.5",
@@ -46,6 +47,7 @@
     "@types/jsonwebtoken": "^8.5.5",
     "@types/mocha": "7.0.2",
     "@types/node": "^16.7.1",
+    "@types/nodemailer": "^6.4.4",
     "@typescript-eslint/eslint-plugin": "~2.7.0",
     "@typescript-eslint/parser": "~2.7.0",
     "concurrently": "^6.2.1",
