--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "migrate": "npx typeorm migration:run",
     "db:migration:create": "ts-node --transpile-only ./node_modules/typeorm/cli.js migration:create -n $1",
     "db:migration:generate": "ts-node --transpile-only ./node_modules/typeorm/cli.js migration:generate -n $1",
+    "db:seed:config": "ts-node ./node_modules/typeorm-seeding/dist/cli.js config",
+    "db:seed:run": "npm run build && ts-node ./node_modules/typeorm-seeding/dist/cli.js seed -n ormconfig.js",
     "migrate:undo": "npx typeorm migration:revert",
     "lint": "eslint --ext ts src",
     "lint:fix": "eslint --ext ts --fix src",
@@ -39,6 +41,7 @@
     "remove": "^0.1.5",
     "source-map-support": "~0.5.19",
     "typeorm": "^0.2.37",
+    "typeorm-seeding": "^1.6.1",
     "typescript": "4.2.3"
   },
   "devDependencies": {
@@ -58,6 +61,7 @@
     "node-git-hooks": "^1.0.6",
     "supertest": "~6.0.0",
     "supervisor": "~0.12.0",
+    "ts-node": "^10.2.1",
     "tsconfig-paths": "^3.11.0",
     "typeorm-uml": "^1.6.4"
   }
