--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "remove": "^0.1.5",
     "source-map-support": "~0.5.19",
     "typeorm": "^0.2.37",
+    "typeorm-seeding": "^1.6.1",
     "typescript": "4.2.3"
   },
   "devDependencies": {
@@ -60,6 +61,7 @@
     "node-git-hooks": "^1.0.6",
     "supertest": "~6.0.0",
     "supervisor": "~0.12.0",
+    "ts-node": "^10.2.1",
     "tsconfig-paths": "^3.11.0",
     "typeorm-uml": "^1.6.4"
   }
