[titl-1201047055676535] add deployment files

--- a/.env.example
+++ b/.env.example
@@ -3,7 +3,7 @@ DB_HOST="localhost"
 DB_PORT="5432"
 DB_USERNAME="titl"
 DB_PASSWORD="super-secure"
-DB_DATABASE="titldb"
+DB_NAME="titldb"
 
 JWT_SECRET="some-secure-string"
 JWT_COOKIE_DOMAIN="localhost"
