--- a/buildspec.yml
+++ b/buildspec.yml
@@ -13,11 +13,19 @@ phases:
     commands:
       - COMMIT_HASH=$(echo $CODEBUILD_RESOLVED_SOURCE_VERSION | cut -c 1-10)
       - IMAGE_TAG=${COMMIT_HASH}
+      - AWS_ADDRESS=$AWS_ACCOUNT_ID.dkr.ecr.$AWS_DEFAULT_REGION.amazonaws.com
+      - REPO_ADDRESS=$AWS_ADDRESS/$IMAGE_REPO_NAME
       - LATEST="$BRANCH-latest"
       - echo Logging in to Amazon ECR...
-      - aws ecr get-login-password --region $AWS_DEFAULT_REGION | docker login --username AWS --password-stdin $AWS_ACCOUNT_ID.dkr.ecr.$AWS_DEFAULT_REGION.amazonaws.com
+      - |
+        aws ecr get-login-password --region $AWS_DEFAULT_REGION | \
+          docker login --username AWS \
+          --password-stdin \
+          $AWS_ADDRESS
       - docker login --username $DOCKER_USERNAME --password $DOCKER_PASSWORD
-      - aws eks --region $AWS_DEFAULT_REGION update-kubeconfig --name $AWS_CLUSTER_NAME
+      - |
+        aws eks --region $AWS_DEFAULT_REGION \
+          update-kubeconfig --name $AWS_CLUSTER_NAME
       - |
         kubectl create secret docker-registry regcred \
         --docker-server=https://index.docker.io/v1/ \
@@ -30,11 +38,14 @@ phases:
       - echo Build started on `date`
       - echo Building the Docker image...
       - |
-        docker build -f ./docker/Dockerfile -t $IMAGE_REPO_NAME:$IMAGE_TAG -t $IMAGE_REPO_NAME:$LATEST .
-      - docker tag $IMAGE_REPO_NAME:$IMAGE_TAG $AWS_ACCOUNT_ID.dkr.ecr.$AWS_DEFAULT_REGION.amazonaws.com/$IMAGE_REPO_NAME:$IMAGE_TAG
-      - docker tag $IMAGE_REPO_NAME:$LATEST $AWS_ACCOUNT_ID.dkr.ecr.$AWS_DEFAULT_REGION.amazonaws.com/$IMAGE_REPO_NAME:$LATEST
-      - docker push $AWS_ACCOUNT_ID.dkr.ecr.$AWS_DEFAULT_REGION.amazonaws.com/$IMAGE_REPO_NAME:$IMAGE_TAG
-      - docker push $AWS_ACCOUNT_ID.dkr.ecr.$AWS_DEFAULT_REGION.amazonaws.com/$IMAGE_REPO_NAME:$LATEST
+        docker build -f ./docker/Dockerfile \
+          -t $IMAGE_REPO_NAME:$IMAGE_TAG \
+          -t $IMAGE_REPO_NAME:$LATEST .
+      - |
+        docker tag $IMAGE_REPO_NAME:$IMAGE_TAG $REPO_ADDRESS:$IMAGE_TAG
+      - docker tag $IMAGE_REPO_NAME:$LATEST $REPO_ADDRESS:$LATEST
+      - docker push $REPO_ADDRESS:$IMAGE_TAG
+      - docker push $REPO_ADDRESS:$LATEST
       - |
         if expr "${use_rds}" : 'false' >/dev/null; then
           helm upgrade db ./kubernetes/helm/database \
@@ -48,7 +59,7 @@ phases:
       - |
         helm upgrade backend ./kubernetes/helm/app \
         --install \
-        --set image.repo=$AWS_ACCOUNT_ID.dkr.ecr.$AWS_DEFAULT_REGION.amazonaws.com/$IMAGE_REPO_NAME:$IMAGE_TAG \
+        --set image.repo=$REPO_ADDRESS:$IMAGE_TAG \
         --set namespace=$NAMESPACE \
         --set DB_HOST=$DB_HOST \
         --set DB_PORT=$DB_PORT \
