[titl-1201158229101840] refresh token on each api request so it doesn't go stale for an active user

--- a/buildspec.yml
+++ b/buildspec.yml
@@ -64,4 +64,5 @@ phases:
         --set DB_HOST=$DB_HOST \
         --set DB_PORT=$DB_PORT \
         --set DB_NAME=$DB_NAME \
-        --set DB_USERNAME=$DB_USERNAME
+        --set DB_USERNAME=$DB_USERNAME \
+        --set ROOT_DOMAIN=$ROOT_DOMAIN
