[titl-1201194471604202] force an update to the password if the password is the same as the default one

--- a/kubernetes/helm/app/templates/deployment.yaml
+++ b/kubernetes/helm/app/templates/deployment.yaml
@@ -58,4 +58,9 @@ spec:
               value: "{{ .Values.JWT_COOKIE_HTTP_ONLY }}"
             - name: JWT_COOKIE_DOMAIN
               value: {{ .Values.ROOT_DOMAIN }}
+            - name: DEFAULT_PASSWORD
+              valueFrom:
+                secretKeyRef:
+                  name: default-password
+                  key: value
       restartPolicy: Always
