--- a/.env.example
+++ b/.env.example
@@ -4,6 +4,9 @@ DB_PORT="5432"
 DB_USERNAME="titl"
 DB_PASSWORD="super-secure"
 DB_NAME="titldb"
+DB_SYNCHRONIZE="true"
+
+DEFAULT_PASSWORD="password"
 
 JWT_SECRET="some-secure-string"
 JWT_COOKIE_DOMAIN="localhost"
