[titl-1201194471604202] fix password reference

--- a/kubernetes/helm/app/templates/deployment.yaml
+++ b/kubernetes/helm/app/templates/deployment.yaml
@@ -61,6 +61,6 @@ spec:
             - name: DEFAULT_PASSWORD
               valueFrom:
                 secretKeyRef:
-                  name: default-password
+                  name: default-user-password
                   key: value
       restartPolicy: Always
