[titl-1201191917781199] use enums from the shared package
* Make adjustments to use the shared package

--- a/buildspec.yml
+++ b/buildspec.yml
@@ -39,6 +39,7 @@ phases:
       - echo Building the Docker image...
       - |
         docker build -f ./docker/Dockerfile \
+          --build-arg GITHUB_ACCESS_TOKEN \
           -t $IMAGE_REPO_NAME:$IMAGE_TAG \
           -t $IMAGE_REPO_NAME:$LATEST .
       - |
