--- a/.github/workflows/passing-tests.yml
+++ b/.github/workflows/passing-tests.yml
@@ -10,5 +10,8 @@ jobs:
         uses: actions/setup-node@v2
         with:
           node-version: '14.x'
+          registry-url: 'https://npm.pkg.github.com'
       - run: yarn install
+        env:
+          NODE_AUTH_TOKEN: ${{ secrets.GIT_HUB_ACCESS_TOKEN }}
       - run: yarn test
