--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,11 +1,15 @@
 FROM node:14
 
+ARG GITHUB_ACCESS_TOKEN
+
 WORKDIR /app
 
 RUN mkdir -p /app/node_modules /app/dist
 RUN chown -R node:node /app/node_modules /app/dist
 
 COPY --chown=node:node package.json yarn.lock ./
+
+RUN echo "//npm.pkg.github.com/:_authToken=${GITHUB_ACCESS_TOKEN}" >> /app/.npmrc
 
 RUN yarn install
 
