[titl-1201405664330971] add files to AWS logic

--- a/kubernetes/helm/app/templates/deployment.yaml
+++ b/kubernetes/helm/app/templates/deployment.yaml
@@ -63,4 +63,18 @@ spec:
                 secretKeyRef:
                   name: default-user-password
                   key: value
+            - name: AWS_ACCESS_KEY_ID
+              valueFrom:
+                secretKeyRef:
+                  name: asset-storage-access-key-id
+                  key: value
+            - name: AWS_SECRET_ACCESS_KEY
+              valueFrom:
+                secretKeyRef:
+                  name: asset-storage-access-key-secret
+                  key: value
+          - name: AWS_BUCKET
+            value: {{ .Values.AWS_BUCKET }}
+            - name: DISK_DRIVER
+              value: '@foal/aws-s3'
       restartPolicy: Always
