--- a/.env.example
+++ b/.env.example
@@ -1,15 +1,15 @@
-DB_CONNECTION="postgres"
-DB_HOST="localhost"
-DB_PORT="5432"
-DB_USERNAME="titl"
-DB_PASSWORD="super-secure"
-DB_NAME="titldb"
-DB_SYNCHRONIZE="true"
+DB_CONNECTION=
+DB_HOST=
+DB_PORT=
+DB_USERNAME=
+DB_PASSWORD=
+DB_NAME=
+DB_SYNCHRONIZE=
 
-DEFAULT_PASSWORD="password"
+DEFAULT_PASSWORD=
 
-JWT_SECRET="some-secure-string"
-JWT_COOKIE_DOMAIN="localhost"
-JWT_COOKIE_HTTP_ONLY="true"
+JWT_SECRET=
+JWT_COOKIE_DOMAIN=
+JWT_COOKIE_HTTP_ONLY=
 
-SETTINGS_LOGGER_FORMAT="tiny"
+SETTINGS_LOGGER_FORMAT=
