Added details to .env.example file

--- a/.env.example
+++ b/.env.example
@@ -1,15 +1,14 @@
-DB_CONNECTION=
-DB_HOST=
-DB_PORT=
-DB_USERNAME=
-DB_PASSWORD=
-DB_NAME=
-DB_SYNCHRONIZE=
+DB_HOST="localhost"
+DB_PORT="5432"
+DB_USERNAME="titl"
+DB_PASSWORD="super-secure"
+DB_NAME="titldb"
+DB_SYNCHRONIZE="true"
 
-DEFAULT_PASSWORD=
+DEFAULT_PASSWORD="password"
 
-JWT_SECRET=
-JWT_COOKIE_DOMAIN=
-JWT_COOKIE_HTTP_ONLY=
+JWT_SECRET="some-secure-string"
+JWT_COOKIE_DOMAIN="localhost"
+JWT_COOKIE_HTTP_ONLY="true"
 
-SETTINGS_LOGGER_FORMAT=
+SETTINGS_LOGGER_FORMAT="tiny"
