--- a/kubernetes/helm/database/templates/deployment.yaml
+++ b/kubernetes/helm/database/templates/deployment.yaml
@@ -32,7 +32,7 @@ spec:
                 name: db-password
                 key: value
           - name: POSTGRES_USER
-            value: {{ .Values.DB_USER }}
+            value: {{ .Values.DB_USERNAME }}
           - name: POSTGRES_DB
             value: {{ .Values.DB_NAME }}
       restartPolicy: Always
