--- a/package.json
+++ b/package.json
@@ -28,23 +28,31 @@
     "node": ">=14"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.46.0",
     "@foal/aws-s3": "^2.6.0",
     "@foal/core": "^2.0.0",
     "@foal/jwt": "^2.5.0",
     "@foal/storage": "^2.6.0",
     "@foal/typeorm": "^2.0.0",
+    "@hubspot/api-client": "^5.0.0",
     "@titl-all/shared": "3.0.18",
+    "airtable": "^0.11.1",
+    "aws-sdk": "^2.1054.0",
+    "axios": "^0.24.0",
     "express": "4.17.1",
+    "hubspot": "^2.3.14",
     "jsonwebtoken": "^8.5.1",
     "module-alias": "^2.2.2",
     "nodemailer": "^6.6.3",
     "pg": "^8.7.1",
     "reflect-metadata": "^0.1.13",
     "remove": "^0.1.5",
+    "request": "^2.88.2",
     "source-map-support": "~0.5.19",
     "typeorm": "^0.2.38",
     "typeorm-seeding": "^1.6.1",
-    "typescript": "4.2.3"
+    "typescript": "4.2.3",
+    "xlsx": "^0.17.5"
   },
   "devDependencies": {
     "@foal/cli": "^2.5.0",
