--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "axios": "^0.24.0",
     "express": "4.17.1",
     "hubspot": "^2.3.14",
+    "jotform": "^0.1.5",
     "jsonwebtoken": "^8.5.1",
     "module-alias": "^2.2.2",
     "nodemailer": "^6.6.3",
