--- a/kubernetes/helm/app/templates/deployment.yaml
+++ b/kubernetes/helm/app/templates/deployment.yaml
@@ -77,4 +77,32 @@ spec:
               value: {{ .Values.AWS_BUCKET }}
             - name: DISK_DRIVER
               value: '@foal/aws-s3'
+            - name: AIRTABLE_ID
+              valueFrom:
+                secretKeyRef:
+                  name: airtable-id
+                  key: value
+            - name: AIRTABLE_KEY
+              valueFrom:
+                secretKeyRef:
+                  name: airtable-api-key
+                  key: value
+            - name: AWS_REGION
+              value: {{ .Values.AWS_REGION }}
+            - name: HUBSPOT_KEY
+              valueFrom:
+                secretKeyRef:
+                  name: hubspot-api-key
+                  key: value
+            - name: JOTFORM_API_KEY
+              valueFrom:
+                secretKeyRef:
+                  name: jotform-api-key
+                  key: value
+            - name: TEMP_DIR
+              value: "/app/temp"
+            - name: UPLOAD_DIR
+              value: "/app/uploads"
+            - name: REPORTS_DIR
+              value: "/app/uploads"
       restartPolicy: Always
