--- a/package.json
+++ b/package.json
@@ -29,15 +29,15 @@
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.46.0",
-    "@foal/aws-s3": "^2.6.0",
+    "@foal/aws-s3": "^2.8.1",
     "@foal/core": "^2.0.0",
     "@foal/jwt": "^2.5.0",
-    "@foal/storage": "^2.6.0",
+    "@foal/storage": "^2.8.1",
     "@foal/typeorm": "^2.0.0",
     "@hubspot/api-client": "^5.0.0",
     "@titl-all/shared": "^3.0.32",
     "airtable": "^0.11.1",
-    "aws-sdk": "^2.1054.0",
+    "aws-sdk": "^2.1082.0",
     "axios": "^0.24.0",
     "express": "4.17.1",
     "hubspot": "^2.3.14",
@@ -53,6 +53,7 @@
     "typeorm": "^0.2.38",
     "typeorm-seeding": "^1.6.1",
     "typescript": "4.2.3",
+    "uuid": "^8.3.2",
     "xlsx": "^0.17.5"
   },
   "devDependencies": {
