--- a/tsconfig.json
+++ b/tsconfig.json
@@ -26,7 +26,7 @@
     "skipLibCheck": true,
     "noImplicitThis": true,
     "noImplicitReturns": true,
-    "noUnusedLocals": true,
+    "noUnusedLocals": false,
     "noUnusedParameters": true,
     "noImplicitAny": true,
     "strictPropertyInitialization": false
