[titl-1201954992112220] Buildspec upgrade to post install

--- a/buildspec.yml
+++ b/buildspec.yml
@@ -77,4 +77,11 @@ phases:
         --set TEMP_DIR=$TEMP_DIR \
         --set UPLOAD_DIR=$UPLOAD_DIR \
         --set REPORTS_DIR=$REPORTS_DIR
-      - npx typeorm schema:sync
+    # Post-build actions to run typeorm migration
+    post_build:
+      commands:
+        - echo Running typeorm migration
+        - |
+        POD=$(kubectl get pods -n $NAMESPACE -l app=backend -o jsonpath='{.items[0].metadata.name}')
+        # run the schema sync command
+        kubectl exec -n $NAMESPACE $POD -- /bin/sh -c "cd /app && yarn typeorm schema:sync"
