--- a/buildspec.yml
+++ b/buildspec.yml
@@ -83,4 +83,4 @@ phases:
       - echo Running typeorm migration
       - |
       POD=$(kubectl get pods -n $NAMESPACE -l app=backend -o jsonpath='{.items[0].metadata.name}')
-      kubectl exec -n $NAMESPACE $POD -- /bin/sh -c "cd /app && yarn typeorm schema:sync"
+      kubectl exec -n $NAMESPACE $POD -- sh -c "npx typeorm schema:sync"
