--- a/buildspec.yml
+++ b/buildspec.yml
@@ -82,5 +82,5 @@ phases:
     commands:
       - echo Running typeorm migration
       - |
-      POD=$(kubectl get pods -n $NAMESPACE -l app=backend -o jsonpath='{.items[0].metadata.name}')
-      kubectl exec -n $NAMESPACE $POD -- sh -c "npx typeorm schema:sync"
+        POD=$(kubectl get pods -n $NAMESPACE -l app=backend -o jsonpath='{.items[0].metadata.name}')
+      - kubectl exec -n $NAMESPACE $POD -- sh -c "npx typeorm schema:sync"
