[titl-1201954992112220] Added the post_build to build spec

--- a/buildspec.yml
+++ b/buildspec.yml
@@ -77,3 +77,10 @@ phases:
         --set TEMP_DIR=$TEMP_DIR \
         --set UPLOAD_DIR=$UPLOAD_DIR \
         --set REPORTS_DIR=$REPORTS_DIR
+  # Post-build actions to run typeorm migration
+  post_build:
+    commands:
+      - echo Running typeorm migration
+      - |
+        POD=$(kubectl get pods -n $NAMESPACE -l app=backend -o jsonpath='{.items[0].metadata.name}')
+      - kubectl exec -n $NAMESPACE $POD -- sh -c "npx typeorm schema:sync"
